# api/controllers/orderServices.js
@@ -12,16 +12,55 @@ var driver = new neo4j.driver(
 exports.postOrder = function postOrder(req, res,next) {
     var response = {};
     const dbSession = driver.session();
+    console.log(req.body);
     var props ={}
     props.name = req.body.name;
     props.size = req.body.size;
     props.description= req.body.description;
+    
     var properties = {
         props:props
       };
       var query =
-      `CREATE (orderNode:order) 
-        SET orderNode += {props}
+      `CREATE (orderNode:order { props })
+        RETURN orderNode `;
+      return new Promise(function(resolve, reject) {
+        dbSession
+          .run(query, properties)
+          .then(function(results) {
+            const result = results.records[0];
+            if (!result) {
+              response.message = "Error";
+              res.status(400).send(response);
+              reject(null);
+            } else {
+              response.message = "Successfully!";
+              response.orderID = result.get("orderNode")["identity"].toString();
+              //response.order = result.get("orderNode")["properties"];
+              res.status(200).json(response);
+              resolve(response);
+            }
+            dbSession.close();
+          })
+          .catch(function(err) {
+            throw err;
+          });
+      });
+  }
+
+
+
+  exports.getOrder = function getOrder(req, res,next) {
+    var response = {};
+    const dbSession = driver.session();
+    var orderID = req.id.value;
+    console.log(req.id.value);
+    var properties = {
+        orderID:orderID
+      };
+      var query =
+      `MATCH (orderNode:order)
+        WHERE id(orderNode)=toInteger($orderID )
         RETURN orderNode `;
       return new Promise(function(resolve, reject) {
         dbSession
@@ -36,7 +75,8 @@ exports.postOrder = function postOrder(req, res,next) {
             } else {
               response.message = "Successfully!";
               response.orderID = result.get("orderNode")["identity"].toString();
-              res.json(response);
+              response.order = result.get("orderNode")["properties"];
+              res.status(200).json(response);
               resolve(response.orderID);
             }
             dbSession.close();
@@ -46,6 +86,3 @@ exports.postOrder = function postOrder(req, res,next) {
           });
       });
   }
-
-
-
