# api/swagger/swagger.yaml
@@ -2,11 +2,9 @@ swagger: "2.0"
 info:
   version: "0.0.1"
   title: Hello World App
-# during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
 basePath: /
-# 
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -19,24 +17,23 @@ produces:
   - application/json
 paths:
   /order:
-    # binds a127 app logic to a route
     x-swagger-router-controller: order
     get:
-      description: Returns 'Hello' to the caller
+      description: get order
       # used as the method name of the controller
       operationId: getOrder
       parameters:
-        - name: name
+        - name: id
           in: query
-          description: The name of the person to whom to say hello
-          required: false
+          description: The ID of the order
+          required: true
           type: string
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/getOrders"
         # responses may fall through to errors
         default:
           description: Error
@@ -57,7 +54,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/getOrders"
         # responses may fall through to errors
         default:
           description: Error
@@ -67,7 +64,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
+  getOrders:
     required:
       - message
     properties:
